--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,35 @@
-*.DS_Store
-.AppleDouble
-.LSOverride
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# Icon must end with two \r
-Icon
+# compiled output
+/dist
+/tmp
 
+# dependencies
+/node_modules
+/bower_components
 
-# Thumbnails
-._*
+# IDEs and editors
+/.idea
+/.vscode
+.project
+.classpath
+.c9/
+*.launch
+.settings/
 
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
+# misc
+/.sass-cache
+/connect.lock
+/coverage/*
+/libpeerconnection.log
+npm-debug.log
+testem.log
+/typings
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# e2e
+/e2e/*.js
+/e2e/*.map
 
-images-master
-test.*
+#System Files
+.DS_Store
+Thumbs.db
